...
    case ready, isLoading, noMoreData, error
}

enum SortOption: String, CaseIterable {
    case relevance = "relevance"
    case name = "name"
    case date = "date"
    case nameDate = "name,date"
    case dateName = "date,name"
    case venueName = "venueName"
    case random = "random"
    
    var displayName: String {
        switch self {
        case .name: return "Nazwa"
        case .date: return "Data"
        case .relevance: return "Trafność"
        case .nameDate: return "Nazwa i Data"
        case .dateName: return "Data i Nazwa"
        case .venueName: return "Nazwa miejsca"
        case .random: return "Losowo"
        }
...
